# rootstock

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Recommendations.md  architecture.md  compose.prod.yml  compose.yml  features.md  sample-playbook.yml  to-build.md
.claude/: settings.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: backup.py  common.py  container.py  dashboard.py  git.py  host.py  hypervisor.py  image.py  move.py  node.py  role.py  secret.py  service.py  template.py  vm.py
backend/app/routers/: apply.py  auth_router.py  backups.py  containers.py  dashboard.py  dns.py  git.py  health.py  hosts.py  hypervisors.py  images.py  ingress.py  nodes.py  roles.py  secrets.py  services.py  settings_router.py  stats.py  templates.py  terminal.py  vms.py
backend/app/services/: ansible_executor.py  apply_history.py  apply_state.py  auth_service.py  backup_service.py  backups_executor.py  caddy_service.py  cloudflare_service.py  compose_service.py  container_store.py  containers_executor.py  dns_executor.py  dns_service.py  git_service.py  global_settings.py  hypervisor_store.py  image_store.py  ingress_executor.py  ingress_service.py  inventory_service.py  move_service.py  node_store.py  playbook_util.py  role_store.py  roles_executor.py  secret_store.py  service_store.py  ssh_service.py  stats_collector.py  template_store.py  terraform_executor.py  terraform_service.py  vm_store.py  yaml_service.py
backend/tests/: conftest.py  test_apply.py
docs/: implementation-plan.md
frontend/: Dockerfile  (+6 more)
(+33 files in other folders)
